# fine-tuning-spikes

./: .gitignore  AGENTS.md  README.md  pyproject.toml
mlx_projects/gemma-3-270m-it-finance-instruct/: 01_data_analysis.ipynb  02_finetune_training.ipynb  03_evaluation.ipynb  README.md  lora_config.yaml
mlx_projects/gemma-3-270m-it-finance-instruct/adapters/: adapter_config.json
mlx_projects/llama-3.2-1b-instruct-customer-support/: 01_finetune_training.ipynb  02_evaluation.ipynb  README.md  lora_config.yaml  source_data.jsonl
mlx_projects/llama-3.2-1b-instruct-customer-support/adapters/: adapter_config.json
sagemaker_projects/: cleanup_sagemaker_resources.ipynb
sagemaker_projects/gemma-3-270m-it-finance-instruct/: 01_data_analysis.ipynb  02_finetune_training.ipynb  03_deploy_and_evaluate.ipynb  04_compare_sagemaker_vs_mlx.ipynb  README.md
sagemaker_projects/gemma-3-270m-it-finance-instruct/sagemaker_code/: requirements.txt  sft.py  sm_accelerate_train.sh
sagemaker_projects/gemma-3-270m-it-finance-instruct/sagemaker_code/hf_recipes/google/: gemma-3-270m-it--vanilla-peft-lora.yaml
sagemaker_projects/gemma-3-4b-it-finance-instruct-500k/: 01_data_analysis.ipynb  02_finetune_training.ipynb  03_deploy_and_evaluate.ipynb  README.md
sagemaker_projects/gemma-3-4b-it-finance-instruct-500k/sagemaker_code/utils/: merge_adapter_weights.py
sagemaker_projects/llama-3.2-1b-instruct-customer-support/: 01_finetune_training.ipynb  02_deploy.ipynb  03_demo.ipynb  README.md
(+4 files in other folders)
