[project]
name = "fine-tuning-spikes"
version = "0.1.0"
description = "Fine-tuning proof of concepts with MLX and SageMaker"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "datasets>=2.14.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "peft>=0.6.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.5.0",
    "mlx-lm>=0.5.0",
]
sagemaker = [
    "sagemaker>=2.200.0",
    "boto3>=1.34.0",
    "smart-open[s3]>=6.0.0",
    "huggingface_hub>=0.20.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
